baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__let_else_edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_shadows_outer"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let x"
              KW_LET "let"
              WORD "x"
          EQUALS "="
          INTEGER_LITERAL "999"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "raw"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "7"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "raw"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return x;"
          KW_RETURN "return"
          WORD "x"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_else_sees_outer_not_inner_yet"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let n"
              KW_LET "let"
              WORD "n"
          EQUALS "="
          INTEGER_LITERAL "11"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "raw"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          STRING_LITERAL "oops"
            QUOTE """
            WORD "oops"
            QUOTE """
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "raw"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              BINARY_EXPR "n - 1"
                WORD "n"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT "return n;"
          KW_RETURN "return"
          WORD "n"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_sequence_threads_bindings"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "raw_a"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "a"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "raw_a"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "raw_b"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          BINARY_EXPR "a + 1"
            WORD "a"
            PLUS "+"
            INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "b"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "raw_b"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-2"
                MINUS "-"
                INTEGER_LITERAL "2"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR "a + b"
            WORD "a"
            PLUS "+"
            WORD "b"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_with_break_in_loop"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let acc"
              KW_LET "let"
              WORD "acc"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let i"
              KW_LET "let"
              WORD "i"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR
            L_PAREN "("
            BINARY_EXPR "i < 6"
              WORD "i"
              LESS "<"
              INTEGER_LITERAL "6"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "raw"
                  COLON ":"
                  PATTERN
                    UNION_PATTERN
                      TYPE_PATTERN
                        TYPE_EXPR "int"
                          WORD "int"
                      PIPE "|"
                      TYPE_PATTERN
                        TYPE_EXPR "string"
                          WORD "string"
              EQUALS "="
              WORD "i"
              SEMICOLON ";"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "n"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "int"
                        WORD "int"
              EQUALS "="
              WORD "raw"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                BREAK_STMT "break;"
                  KW_BREAK "break"
                  SEMICOLON ";"
                R_BRACE "}"
              SEMICOLON ";"
            BINARY_EXPR
              WORD "acc"
              EQUALS "="
              BINARY_EXPR "acc + n"
                WORD "acc"
                PLUS "+"
                WORD "n"
            SEMICOLON ";"
            BINARY_EXPR
              WORD "i"
              EQUALS "="
              BINARY_EXPR "i + 1"
                WORD "i"
                PLUS "+"
                INTEGER_LITERAL "1"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return acc;"
          KW_RETURN "return"
          WORD "acc"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_with_continue_in_loop"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let acc"
              KW_LET "let"
              WORD "acc"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let i"
              KW_LET "let"
              WORD "i"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_STMT
          KW_WHILE "while"
          PAREN_EXPR
            L_PAREN "("
            BINARY_EXPR "i < 5"
              WORD "i"
              LESS "<"
              INTEGER_LITERAL "5"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR
              WORD "i"
              EQUALS "="
              BINARY_EXPR "i + 1"
                WORD "i"
                PLUS "+"
                INTEGER_LITERAL "1"
            SEMICOLON ";"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "raw"
                  COLON ":"
                  PATTERN
                    UNION_PATTERN
                      TYPE_PATTERN
                        TYPE_EXPR "int"
                          WORD "int"
                      PIPE "|"
                      TYPE_PATTERN
                        TYPE_EXPR "string"
                          WORD "string"
              EQUALS "="
              WORD "i"
              SEMICOLON ";"
            LET_STMT
              PATTERN
                BINDING_PATTERN
                  KW_LET "let"
                  WORD "n"
                  COLON ":"
                  PATTERN
                    TYPE_PATTERN
                      TYPE_EXPR "int"
                        WORD "int"
              EQUALS "="
              WORD "raw"
              KW_ELSE "else"
              BLOCK_EXPR
                L_BRACE "{"
                CONTINUE_STMT "continue;"
                  KW_CONTINUE "continue"
                  SEMICOLON ";"
                R_BRACE "}"
              SEMICOLON ";"
            BINARY_EXPR
              WORD "acc"
              EQUALS "="
              BINARY_EXPR "acc + n"
                WORD "acc"
                PLUS "+"
                WORD "n"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return acc;"
          KW_RETURN "return"
          WORD "acc"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_binding_captured_in_lambda"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "raw"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "9"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "raw"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let f"
              KW_LET "let"
              WORD "f"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              BINARY_EXPR "n + 1"
                WORD "n"
                PLUS "+"
                INTEGER_LITERAL "1"
              R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          CALL_EXPR
            WORD "f"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_else_after_block_uses_binding"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "raw"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "5"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "n"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "int"
                    WORD "int"
          EQUALS "="
          WORD "raw"
          KW_ELSE "else"
          BLOCK_EXPR
            L_BRACE "{"
            RETURN_STMT
              KW_RETURN "return"
              UNARY_EXPR "-1"
                MINUS "-"
                INTEGER_LITERAL "1"
              SEMICOLON ";"
            R_BRACE "}"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let doubled"
              KW_LET "let"
              WORD "doubled"
          EQUALS "="
          BINARY_EXPR "n * 2"
            WORD "n"
            STAR "*"
            INTEGER_LITERAL "2"
          SEMICOLON ";"
        RETURN_STMT "return doubled;"
          KW_RETURN "return"
          WORD "doubled"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
