baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__02_parser__while_let.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "while_let_type_narrow_terminates_on_mismatch"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "x"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let count"
              KW_LET "let"
              WORD "count"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_LET_STMT
          KW_WHILE "while"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "n"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "x"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR
              WORD "count"
              EQUALS "="
              BINARY_EXPR "count + 1"
                WORD "count"
                PLUS "+"
                INTEGER_LITERAL "1"
            SEMICOLON ";"
            IF_EXPR
              KW_IF "if"
              BINARY_EXPR "count >= 3"
                WORD "count"
                GREATER_EQUALS ">="
                INTEGER_LITERAL "3"
              BLOCK_EXPR
                L_BRACE "{"
                BINARY_EXPR
                  WORD "x"
                  EQUALS "="
                  STRING_LITERAL "stop"
                    QUOTE """
                    WORD "stop"
                    QUOTE """
                SEMICOLON ";"
                R_BRACE "}"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return count;"
          KW_RETURN "return"
          WORD "count"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "while_let_with_assignment_inside"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "v"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "5"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let sum"
              KW_LET "let"
              WORD "sum"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_LET_STMT
          KW_WHILE "while"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "n"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR
              WORD "sum"
              EQUALS "="
              BINARY_EXPR "sum + n"
                WORD "sum"
                PLUS "+"
                WORD "n"
            SEMICOLON ";"
            IF_EXPR
              KW_IF "if"
              BINARY_EXPR "sum >= 15"
                WORD "sum"
                GREATER_EQUALS ">="
                INTEGER_LITERAL "15"
              BLOCK_EXPR
                L_BRACE "{"
                BINARY_EXPR
                  WORD "v"
                  EQUALS "="
                  STRING_LITERAL "done"
                    QUOTE """
                    WORD "done"
                    QUOTE """
                SEMICOLON ";"
                R_BRACE "}"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return sum;"
          KW_RETURN "return"
          WORD "sum"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "while_let_nested"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "outer"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "inner"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "10"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let acc"
              KW_LET "let"
              WORD "acc"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_LET_STMT
          KW_WHILE "while"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "o"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "outer"
          BLOCK_EXPR
            L_BRACE "{"
            WHILE_LET_STMT
              KW_WHILE "while"
              LET_STMT
                PATTERN
                  BINDING_PATTERN
                    KW_LET "let"
                    WORD "i"
                    COLON ":"
                    PATTERN
                      TYPE_PATTERN
                        TYPE_EXPR "int"
                          WORD "int"
                EQUALS "="
                WORD "inner"
              BLOCK_EXPR
                L_BRACE "{"
                BINARY_EXPR
                  WORD "acc"
                  EQUALS "="
                  BINARY_EXPR
                    BINARY_EXPR "acc + o"
                      WORD "acc"
                      PLUS "+"
                      WORD "o"
                    PLUS "+"
                    WORD "i"
                SEMICOLON ";"
                BINARY_EXPR
                  WORD "inner"
                  EQUALS "="
                  STRING_LITERAL "stop"
                    QUOTE """
                    WORD "stop"
                    QUOTE """
                SEMICOLON ";"
                R_BRACE "}"
            SEMICOLON ";"
            BINARY_EXPR
              WORD "outer"
              EQUALS "="
              STRING_LITERAL "stop"
                QUOTE """
                WORD "stop"
                QUOTE """
            SEMICOLON ";"
            BINARY_EXPR "inner = 10"
              WORD "inner"
              EQUALS "="
              INTEGER_LITERAL "10"
            SEMICOLON ";"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return acc;"
          KW_RETURN "return"
          WORD "acc"
          SEMICOLON ";"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "while_let_with_continue"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "v"
              COLON ":"
              PATTERN
                UNION_PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
                  PIPE "|"
                  TYPE_PATTERN
                    TYPE_EXPR "string"
                      WORD "string"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            BINDING_PATTERN "let acc"
              KW_LET "let"
              WORD "acc"
          EQUALS "="
          INTEGER_LITERAL "0"
          SEMICOLON ";"
        WHILE_LET_STMT
          KW_WHILE "while"
          LET_STMT
            PATTERN
              BINDING_PATTERN
                KW_LET "let"
                WORD "n"
                COLON ":"
                PATTERN
                  TYPE_PATTERN
                    TYPE_EXPR "int"
                      WORD "int"
            EQUALS "="
            WORD "v"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR
              WORD "v"
              EQUALS "="
              BINARY_EXPR "n + 1"
                WORD "n"
                PLUS "+"
                INTEGER_LITERAL "1"
            SEMICOLON ";"
            IF_EXPR
              KW_IF "if"
              BINARY_EXPR "n == 2"
                WORD "n"
                EQUALS_EQUALS "=="
                INTEGER_LITERAL "2"
              BLOCK_EXPR
                L_BRACE "{"
                CONTINUE_STMT "continue;"
                  KW_CONTINUE "continue"
                  SEMICOLON ";"
                R_BRACE "}"
            BINARY_EXPR
              WORD "acc"
              EQUALS "="
              BINARY_EXPR "acc + n"
                WORD "acc"
                PLUS "+"
                WORD "n"
            SEMICOLON ";"
            IF_EXPR
              KW_IF "if"
              BINARY_EXPR "n >= 4"
                WORD "n"
                GREATER_EQUALS ">="
                INTEGER_LITERAL "4"
              BLOCK_EXPR
                L_BRACE "{"
                BINARY_EXPR
                  WORD "v"
                  EQUALS "="
                  STRING_LITERAL "stop"
                    QUOTE """
                    WORD "stop"
                    QUOTE """
                SEMICOLON ";"
                R_BRACE "}"
            R_BRACE "}"
        SEMICOLON ";"
        RETURN_STMT "return acc;"
          KW_RETURN "return"
          WORD "acc"
          SEMICOLON ";"
        R_BRACE "}"

=== ERRORS ===
None
